Fix: Browse car model :))

--- a/BAJK.EAutoSerwis.solution.xLib/BAJK.EAutoSerwis.solution.xLib.csproj
+++ b/BAJK.EAutoSerwis.solution.xLib/BAJK.EAutoSerwis.solution.xLib.csproj
@@ -41,6 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+	  <Compile Include="CarLot.cs" />
+	  <Compile Include="ICarLot.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
