--- a/BAJK.EAutoSerwis.solution.xLib/BAJK.EAutoSerwis.solution.xLib.csproj
+++ b/BAJK.EAutoSerwis.solution.xLib/BAJK.EAutoSerwis.solution.xLib.csproj
@@ -44,6 +44,7 @@
 	  <Compile Include="CarLot.cs" />
 	  <Compile Include="ICarLot.cs" />
     <Compile Include="Car.cs" />
+    <Compile Include="Customer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
