Creating webServiceClient example

--- a/BAJK.EAutoSerwis.solution.xLib/BAJK.EAutoSerwis.solution.xLib.csproj
+++ b/BAJK.EAutoSerwis.solution.xLib/BAJK.EAutoSerwis.solution.xLib.csproj
@@ -41,8 +41,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-	  <Compile Include="CarLot.cs" />
-	  <Compile Include="ICarLot.cs" />
+    <Compile Include="CarDto.cs" />
+    <Compile Include="CarLot.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="ICarLot.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
