add: post new mechanic, but add 2 times

--- a/BAJK.EAutoSerwis.solution.xLib/BAJK.EAutoSerwis.solution.xLib.csproj
+++ b/BAJK.EAutoSerwis.solution.xLib/BAJK.EAutoSerwis.solution.xLib.csproj
@@ -9,9 +9,10 @@
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>BAJK.EAutoSerwis.solution.xLib</RootNamespace>
     <AssemblyName>BAJK.EAutoSerwis.solution.xLib</AssemblyName>
-    <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -75,6 +76,10 @@
     <Compile Include="ICarLot.cs" />
     <Compile Include="Car.cs" />
     <Compile Include="Customer.cs" />
+    <Compile Include="IMechanicLot.cs" />
+    <Compile Include="Mechanic.cs" />
+    <Compile Include="MechanicDto.cs" />
+    <Compile Include="MechanicLot.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
